# minkowski-monorepo

./: .env.example  .gitignore  CODEOWNERS  Makefile  README.md  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml  turbo.json
.github/: CODEOWNERS  README.md
.github/workflows/: README.md  ci.yml
apps/: README.md  app-manifest.json
apps/corporate-website/: README.md  docker-compose.yml
apps/corporate-website/api/backend/: pyproject.toml  requirements.txt
apps/corporate-website/api/backend/app/: db.py  main.py  models.py
apps/corporate-website/api/backend/app/routes/: design_test.py
apps/corporate-website/api/backend/seed/: seed_design_test.js  seed_test_items.py
apps/design-your-space/: README.md  project.yaml
apps/employee-platform/api/backend/: .env.example  README.md  pyproject.toml
data-contracts/: README.md
db/: README.md
db/migrations/: 001_create_core_tables.sql
docs/: README.md  handbook.md
docs/architecture/: README.md  adr-0001-data-plane.md
docs/product/: README.md  design-your-space.prd.md
docs/runbooks/: README.md  api-latency.md
env/: README.md  local.env.example
env/app/: README.md  local.env.example
env/data/: README.md  warehouse.connections.yaml
infra/: README.md  docker-compose.yml  modules.yaml
infra/github/: README.md
infra/k8s/: README.md
infra/terraform/: README.md  main.tf
observability/: README.md  slo_scorecard.yaml
observability/alerts/: README.md  high-latency.yaml
observability/dashboards/: README.md  (+1 more)
samples/: .gitignore  README.md
schemas/: README.md  orders.schema.yaml
services/: README.md  service-catalog.yaml
services/ai-agents/: .env.example  README.md  pyproject.toml
services/ai-agents/app/: main.py  models.py
services/ai-agents/app/routes/: agents.py
tests/: README.md  test_matrix.yaml
tools/: Makefile  README.md
(+133 files in other folders)
