[project]
name = "minkowski-monorepo"
version = "0.0.0"
description = "Workspace metadata for Minkowski Python tooling."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["node_modules", "dist", ".turbo", ".venv"]

[tool.pytest.ini_options]
addopts = "-q"
