[project]
name = "employee-platform-backend"
version = "0.0.0"
description = "FastAPI backend skeleton for the employee platform."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<0.31.0",
    "motor>=3.4.0,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pydantic>=2.7.0,<3.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
